# KTW

./: Cargo.toml
src/: main.rs
src/comandos/: installer.rs
src/funciones/: descargas.rs  helpers.rs  mod.rs
src/paquete/: mod.rs  paquete.rs
src/resources/: temp.ps1
