[package]
name = "ktw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata]
rust.script_path = "scripts/temp.ps1"

[dependencies]
dirs = "5.0.1"
colored = "2.0.4"
reqwest = {version = "0.11.12", features = ["blocking"]}
tokio = {version = "1.34", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
indicatif = {version = "*", features = ["rayon"]}
clap = { version = "4.4.11", features = ["derive"] }

[build]
res = "resources"